--- a/src/main/resources/assets/bewitchment/lang/en_us.lang
+++ b/src/main/resources/assets/bewitchment/lang/en_us.lang
@@ -420,7 +420,7 @@ tarot.is_spectre=%s wants to move on.
 tarot.not_spectre=%s seems worldly like normal.
 tarot.is_vampire=%s is kindred to bats and moths.
 tarot.not_vampire=%s enjoys a picnic on a sunny day.
-tarot.is_wolf=%s is kinred to wolves.
+tarot.is_wolf=%s is kindred to wolves.
 tarot.not_wolf=%s sleeps well on a full moon.
 tarot.is_protected=%s is well protected.
 tarot.not_protected=%s has rather mundane protection.
